--- a/index.html
+++ b/index.html
@@ -6,51 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Menu</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 
 <body>
-    <main>
-        <h1>CAMPER CAFE</h1>
-        <p>Est. 2020</p>
-        <hr>
-        <section>
-            <h2>Coffee</h2>
-            <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="hot coffee" />
-            <artcile>
-                <p>French Vanilla</p>
-                <p>3.00</p>
-                <p>Caramel Macchiato</p>
-                <p>3.75</p>
-                <p>Pumpkin Spice</p>
-                <p>3.50</p>
-                <p>Hazelnut</p>
-                <p>4.00</p>
-                <p>Mocha</p>
-                <p>4.50</p>
-            </artcile>
-        </section>
+    <div class="menu">
+        <main>
+            <h1>CAMPER CAFE</h1>
+            <p>Est. 2020</p>
+            <hr>
+            <section>
+                <h2>Coffee</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="hot coffee" />
+                <article class="item">
+                    <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>  
+                </article>
+                <article class="item">
+                    <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p> 
+                </article>
+                <article class="item">
+                    <p class="flavor">Hazelnut</p><p class="price">4.00</p>
+                </article>
+                <article class="item">
+                    <p class="flavor">Mocha</p><p class="price">4.50</p>
+                </article>
 
-        <section>
-            <h2>Desserts</h2>
-            <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="hot coffee" />
-            <artcile>
-                <p>Donut</p>
-                <p>1.50</p>
-                <p>Cherry Pie</p>
-                <p>2.75</p>
-                <p>Cheesecake</p>
-                <p>3.00</p>
-                <p>Cinnamon Roll</p>
-                <p>2.50</p>
-            </artcile>
-        </section>
-    </main>
-    <hr>
-    <footer>
-        <a href="https://www.freecodecamp.org">Visit our website</a>
-        <p>123 Free Code Camp Drive</p>
-    </footer>
+            </section>
+
+            <section>
+                <h2>Desserts</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="hot coffee" />
+                <article class="item">
+                    <p class="dessert">Donut</p><p class="price">1.50</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+                </article>
+            </section>
+        </main>
+        <hr class="bottom-line">
+        <footer>
+            <p><a href="https://www.freecodecamp.org">Visit our website</a></p>
+            <p>123 Free Code Camp Drive</p>
+        </footer>
+    </div>
 
 </body>
-
 </html>
